<resources>
    <string name="app_name">Auto Vehicle</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="menumsg">\t Please Select the mode \nyou\'d like to operate the robotic car in</string>
    <string name="bRemote">Remote</string>
    <string name="remoteMsg">Control the car</string>
    <string name="bMapping">Mapping</string>
    <string name="mappingMsg">Map received!</string>
    <string name="logout">logout</string>

    <string name="password">Password</string>
    <string name="groupname" translatable="false">JBK.17</string>
    <string name="x" translatable="false">X:</string>
    <string name="y" translatable="false">Y:</string>
    <string name="angle">Angle:</string>
    <string name="distance">Distance:</string>
    <string name="direction">Direction:</string>

    <string name="abTitle">Exiting the App</string>
    <string name="abMsg">Are you sure you want to Exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="stop">stop</string>
    <string name="start">start</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_for_an_account">Sign Up for an Account</string>
    <string name="remember_me">Remember me</string>
    <string name="connect">Connect</string>
    <string name="enter_the_ip_address_of_the_robot">IP Address of the Robot</string>
    <string name="close_connection">Close Connection</string>
    <string name="noipsettings">Go To Settings!</string>
    <string name="wouldyou">Would you like to add an IP Address?</string>
    <string name="later">Later</string>
    <string name="RemoteActivity">Remote Control</string>
    <string name="Register">Register</string>
    <string name="center">Center</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="upright">Up Right</string>
    <string name="upleft">Up Left</string>
    <string name="downright">Down Right</string>
    <string name="downleft">Down Left</string>
    <string name="missingname">Missing Name</string>
    <string name="missinguser">Missing User Name</string>
    <string name="missingpassword">Missing Password</string>
    <string name="missingreenter">Passwords do not match</string>
    <string name="registerfail">Registration Failed</string>
    <string name="retry">Retry</string>
    <string name="exitquestion">Do you want to exit?</string>
    <string name="sure">Are you sure you want to exit?</string>
    <string name="recordmatch">The username and password you entered do not match our records</string>
    <string name="doublecheck">Please double-check and try again</string>
    <string name="usernamereq">User Name required</string>
    <string name="passwordreq">Password required</string>
    <string name="bothreq">Both fields need to be entered</string>
    <string name="mainmenu">Main Menu</string>
    <string name="ok">OK</string>
    <string name="noconnection">No connection to close!</string>
    <string name="IPAddress">IP Address</string>
    <string name="enterip">Enter IP address in settings!</string>
    <string name="Khemar" translatable="false">Khemar Bryan</string>
    <string name="Jan" translatable="false">Jan Yalda</string>
    <string name="Bilal" translatable="false">Bilal Alfanous</string>
    <string name="developers">Developers</string>
    <string name="jbk17" translatable="false">JBK17</string>
    <string name="versionnum">Version 1.0.0</string>
    <string name="go_to_settings">Go to Settings!</string>
    <string name="turnon">Toggle ON</string>
    <string name="toggleoff">Toggle OFF</string>
    <string name="visible">Make Visible</string>
    <string name="invalidIP">Invalid IP Address</string>
    <string name="BTQuestion">Bluetooth isn\'t enabled, would you like to go to settings to turn it on?</string>
    <string name="notestablished">Connection not established with the robot</string>
    <string name="mappingst">Mapping started</string>
    <string name="bluetoothnotif">Go to settings and turn bluetooth on</string>
    <string name="stopping">Stopping car..</string>
    <string name="connected">Connected!!</string>
    <string name="trying">Attemping connection....</string>
    <string name="closing">Closing connection!</string>
    <string name="unable">Unable to send map :(</string>
    <string name="get_the_mapped_area">Get the mapped area from Hardware</string>
    <string name="remote_control_bt">Remote Control(BT)</string>
    <string name="control_the_car_with_bluetooth">Control the car with bluetooth</string>
    <string name="senttodb">Map sent to database</string>


</resources>
