<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_menu"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.autonomousvehicle.MenuActivity"
    android:background="@drawable/backgrond">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/menumsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvMsg1"
            android:textAlignment="center" />

        <Button
            android:text="@string/bRemote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bRemote"
            android:layout_marginTop="30dp"
            android:background="@android:color/holo_orange_dark"
            android:textColor="@android:color/background_light" />

        <TextView
            android:text="@string/remoteMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvRemoteMsg"
            android:textAlignment="center" />

        <Button
            android:text="@string/bMapping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bMapping"
            android:layout_marginTop="30dp"
            android:background="@android:color/holo_orange_dark"
            android:textColor="@android:color/background_light" />

        <TextView
            android:text="@string/get_the_mapped_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvMappingMsg"
            android:textAlignment="center" />

        <Button
            android:text="@string/remote_control_bt"
            android:id="@+id/bluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@android:color/holo_orange_dark"
            android:textColor="@android:color/background_light"/>
        <TextView
            android:text="@string/control_the_car_with_bluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvMap"
            android:textAlignment="center" />

    </LinearLayout>
</RelativeLayout>
