<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="30dp"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:textColor="#444444"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y"
            android:textColor="#444444"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/angle"
            android:textColor="#444444"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:textColor="#444444"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direction"
            android:textColor="#444444"
            android:textSize="20dp" />

        <Button
            android:text="Close Connection"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:id="@+id/bClose" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_joystick"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="36dp"
        android:background="@drawable/image_button_bg" >
    </RelativeLayout>

    <TextView
        android:text="@string/groupname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="44dp"
        android:id="@+id/textView"
        android:layout_below="@+id/layout_joystick"
        android:layout_toStartOf="@+id/layout_joystick" />

</RelativeLayout>
